--- a/aftercare/helpful.html
+++ b/aftercare/helpful.html
@@ -30,8 +30,8 @@ i want to know <strong>ALL</strong> of your thoughts. what did you like? what di
 <ul>
 <li data-line="6" dir="auto">if we are both feeling good this can be in the moment - if i'm <a data-href="nonverbal" href="aftercare/nonverbal.html" class="internal-link" target="_self" rel="noopener nofollow">nonverbal</a> or <a data-href="dropping" href="aftercare/dropping.html" class="internal-link" target="_self" rel="noopener nofollow">dropping</a> this can be difficult - in those cases talking about it later and/or the next day is great</li>
 <li data-line="7" dir="auto">point to specific elements in play!</li>
-<li data-line="8" dir="auto">ask questions, let me know if you want clarification, if things could be different for another time!</li>
-<li data-line="9" dir="auto">let me do the same!</li>
+<li data-line="8" dir="auto">ask questions, let me know if you want clarification, if things could be different for another time</li>
+<li data-line="9" dir="auto">let me do the same</li>
 <li data-line="10" dir="auto">when done well this brings security to playing with you &amp; helps me understand how to move forward. eliminates lots of anxieties!</li>
 </ul>
 </li>
